Made dark mode.. Darker, Fixed some elements being hidden due to overlap

--- a/server_release_template/web_gui/css/darkly/style.css
+++ b/server_release_template/web_gui/css/darkly/style.css
@@ -275,6 +275,7 @@ margin-bottom: 10px;
   position: fixed;
   bottom: 30px;
   right: 50px;
+  z-index: 10;
 }
 
 #registeredDriversInst {
@@ -298,6 +299,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 a {
+  color: #007bff;
+}
+a:hover {
   color: #007bff;
 }
 
